syntax = "proto3";

package pb;

import "global.proto";

// rules: qevent_rpc
service RPC_User {
    //rpc User (Param) returns (Response);

    // CrUd
    rpc UserRegisterUser (UserRegisterUserParam) returns (UserRegisterUserResponse);
    rpc UserEditUser (UserEditUserParam) returns (UserEditUserResponse);

    // Delete
    rpc UserDeleteSendCode (UserDeleteSendCodeParam) returns (UserDeleteSendCodeResponse);
    rpc UserDeleteConfirmCode (UserDeleteConfirmCodeParam) returns (UserDeleteConfirmCodeResponse);
    rpc UserDeleteUser (UserDeleteUserParam) returns (UserDeleteUserResponse);

    // Phone (phone is per User not per Profile)
    rpc UserChangePhoneNumber (UserChangePhoneNumberParam) returns (UserChangePhoneNumberResponse);

    // Email

    // Password

    // Session
    rpc UserRemoveSession (UserRemoveSessionParam) returns (UserRemoveSessionResponse);
    rpc UserRemoveOtherSessions (UserRemoveOtherParam) returns (UserRemoveOtherResponse);

//    rpc UserRemoveOtherSessions (UserRemoveOtherParam) returns (UserRemoveOtherResponse);

    // Settings > not in here in Profile

    // Views
    rpc UserGetMe (UserGetMeParam) returns (UserGetMeResponse);
    rpc UserGetActiveSessions (UserGetActiveSessionsParam) returns (UserGetActiveSessionsResponse);

}

// CrUd
message UserRegisterUserParam {
    string first_name = 2;
    string last_name = 3;
    string phone_number = 15;

    string hash_code = 10;
    string confirm_code = 30;
}

message UserRegisterUserResponse {
    User user = 1;
    Session session = 2; // A new session for this log in
}


message UserEditUserParam {
    bool set_new_name = 3;
    string new_first_name = 4;
    string new_last_name = 6;
}

message UserEditUserResponse {
    User user = 1;
}


// Delete User
message UserDeleteSendCodeParam {
    bool Resend = 1;
}

message UserDeleteSendCodeResponse {
    repeated string sms_numbers = 4;
}


message UserDeleteConfirmCodeParam {
    string code = 3; //4 digit 4215
}

message UserDeleteConfirmCodeResponse {
    bool done = 1;
}


message UserDeleteUserParam {
}

message UserDeleteUserResponse {
    bool done = 1;
}


// Phone
message UserChangePhoneNumberParam {
}

message UserChangePhoneNumberResponse {
    bool done =1;
    string text = 2;
}

// Email


// Password


// Session
message UserRemoveSessionParam {
}

message UserRemoveSessionResponse {
}


message UserRemoveOtherParam {
}

message UserRemoveOtherResponse {
}


// Views
message UserGetMeParam {
}

message UserGetMeResponse {
}


message UserGetActiveSessionsParam {
}

message UserGetActiveSessionsResponse {
}


/*
message Param {
}

message Response {
}
*/
